# apps/user-web-api/src/routes/user-relationship/unblock-user.ts
@@ -7,28 +7,24 @@ import { Static, Type } from '@sinclair/typebox'
 import { FastifyPluginCallback, RouteShorthandOptions } from 'fastify'
 import { businessRuleErrorResponseSchema } from '..'
 
-export const sendFriendRequestRoute: FastifyPluginCallback = (fastify, options, done) => {
-  fastify.post<{ Body: Static<typeof bodySchema> }>('/send', routeOptions, async (request, reply) => {
-    const response = await CMD.SendFriendRequest.handle(
+export const unblockUserRoute: FastifyPluginCallback = (fastify, options, done) => {
+  fastify.post<{ Body: Static<typeof bodySchema> }>('/unblock', routeOptions, async (request, reply) => {
+    await CMD.UnblockUser.handle(
       {
         id: request.id,
         fromUserId: request.body.fromUserId,
         toUserId: request.body.toUserId,
       },
       {
-        getUserById: UserAuth.Accessor.getUserById(fastify.userAuthConn, Common.Logger.log(request.log), request.id),
-        getLastFriendRequestBetweenUsers: EventStore.Accessor.FriendRequest.getLastFriendRequestBetweenUsers(
-          fastify.eventStoreConn
-        ),
-        getUserRelationship: EventStore.Accessor.UserRelationship.getBetweenUsers(fastify.eventStoreConn),
         processEvent: INT.Event.processEvent(
           EventStore.Accessor.Event.persistEvent(fastify.eventStoreConn),
           MessageBroker.publishEvent(request.msgBrokerChannel),
           EventStore.Accessor.Event.markEventAsSent(fastify.eventStoreConn)
         ),
+        getUserById: UserAuth.Accessor.getUserById(fastify.userAuthConn, Common.Logger.log(request.log), request.id),
       }
     )
-    await reply.status(200).send(response)
+    await reply.status(200).send()
   })
   done()
 }
@@ -41,9 +37,6 @@ const bodySchema = Type.Object({
 const responseSchema = {
   200: {
     type: 'object',
-    properties: {
-      friendRequestId: { type: 'string' },
-    },
   },
   ...businessRuleErrorResponseSchema,
 }
